--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "next": "^10.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.2.0",
     "sass": "^1.34.0"
   },
@@ -16,6 +17,7 @@
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
+    "@types/react-google-recaptcha": "^2.1.0",
     "typescript": "^4.3.2"
   }
 }
