--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.2.0",
-    "sass": "^1.34.0"
+    "sass": "^1.34.0",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@types/node": "^15.6.1",
