--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
 		"paths": {
 			"@components/*": ["components/*"],
 			"@models/*": ["models/*"],
-			"@styles/*": ["styles/*"]
+			"@styles/*": ["styles/*"],
+			"@src/*": ["./*"]
 		},
 		"target": "es5",
 		"lib": ["dom", "dom.iterable", "esnext"],
