--- a/netlify.toml
+++ b/netlify.toml
@@ -3,5 +3,8 @@
 
     command = "yarn build"
 
+    [environment]
+        NODE_VERSION = "12.22.0"
+
     [[plugins]]
         package = "@netlify/plugin-nextjs"
