--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "build": "next build",
+    "lint": "next lint",
     "start": "next start",
     "dev": "next dev",
     "test-build": "tsc"
@@ -21,6 +22,8 @@
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
     "@types/react-google-recaptcha": "^2.1.0",
+    "eslint": "<8.0.0",
+    "eslint-config-next": "12.0.3",
     "typescript": "^4.3.2"
   }
 }
