--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,13 +11,50 @@ jobs:
     steps:
       - name: Setup checkout
         uses: actions/checkout@v2
+
       - name: Setup NodeJS v12
         uses: actions/setup-node@v1
         with:
           node-version: 12.22.0
+          cache: yarn
+
       - name: Install all dependencies
         run: yarn install
+
       - name: Check for errors
         run: yarn build
-      # - name: ESlint check
-      #   run: yarn lint
+
+  docker:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      # Setup
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      # Login
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: guusvanmeerveld
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # Build & Push
+      - name: Build Dockerfile and push
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: guusvanmeerveld/argo-web:latest
+          platforms: |
+            linux/amd64
+            linux/arm64
+            linux/arm/v7
+
+          # Cache
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
