--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "swr": "^0.5.6"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
