--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-  "scripts": {
-    "build": "next build",
-    "lint": "next lint",
-    "start": "next start",
-    "dev": "next dev"
-  },
-  "dependencies": {
-    "bootstrap": "^5.0.2",
-    "next": "^12.0.3",
-    "next-i18next": "^8.9.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-google-recaptcha": "^2.1.0",
-    "react-icons": "^4.2.0",
-    "sass": "^1.34.0",
-    "swr": "^0.5.6"
-  },
-  "devDependencies": {
-    "@svgr/webpack": "^5.5.0",
-    "@types/node": "^15.6.1",
-    "@types/react": "^17.0.8",
-    "@types/react-dom": "^17.0.5",
-    "@types/react-google-recaptcha": "^2.1.0",
-    "eslint": "<8.0.0",
-    "eslint-config-next": "12.0.3",
-    "typescript": "^4.3.2"
-  }
+	"scripts": {
+		"build": "next build",
+		"lint": "next lint",
+		"start": "next start",
+		"dev": "next dev",
+		"format": "prettier --write ."
+	},
+	"dependencies": {
+		"bootstrap": "^5.0.2",
+		"next": "^12.0.3",
+		"next-i18next": "^8.9.0",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-google-recaptcha": "^2.1.0",
+		"react-icons": "^4.2.0",
+		"sass": "^1.34.0",
+		"swr": "^0.5.6"
+	},
+	"devDependencies": {
+		"@svgr/webpack": "^5.5.0",
+		"@trivago/prettier-plugin-sort-imports": "^3.1.1",
+		"@types/node": "^15.6.1",
+		"@types/react": "^17.0.8",
+		"@types/react-dom": "^17.0.5",
+		"@types/react-google-recaptcha": "^2.1.0",
+		"eslint": "<8.0.0",
+		"eslint-config-next": "12.0.3",
+		"prettier": "^2.4.1",
+		"typescript": "^4.3.2"
+	}
 }
