--- a/.prettierrc
+++ b/.prettierrc
@@ -9,7 +9,10 @@
 		"^next.*",
 		"^react$",
 		"^react.*",
+		"^axios",
+		"^swr",
 		"^@src/.*",
+		"^@interfaces/.*",
 		"^@models/.*",
 		"^@utils/.*",
 		"^@components/.*",
