--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"axios": "^0.24.0",
 		"bootstrap": "^5.0.2",
 		"next": "^12.0.3",
 		"next-i18next": "^8.9.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-google-recaptcha": "^2.1.0",
 		"react-icons": "^4.2.0",
 		"sass": "^1.34.0",
-		"swr": "^0.5.6"
+		"swr": "^1.0.1"
 	},
 	"devDependencies": {
 		"@svgr/webpack": "^5.5.0",
