--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
 		"paths": {
 			"@components/*": ["components/*"],
 			"@images/*": ["images/*"],
+			"@interfaces/*": ["interfaces/*"],
 			"@models/*": ["models/*"],
 			"@styles/*": ["styles/*"],
 			"@src/*": ["./*"]
