Backend: Added api route for fetching commits. Front-end: Added pagination system to commit section.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
 			"@components/*": ["components/*"],
 			"@images/*": ["images/*"],
 			"@interfaces/*": ["interfaces/*"],
+			"@utils/*": ["utils/*"],
 			"@models/*": ["models/*"],
 			"@styles/*": ["styles/*"],
 			"@src/*": ["./*"]
