--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.2.0",
+		"react-spinners": "^0.11.0",
 		"sass": "^1.34.0",
 		"sharp": "^0.29.2",
 		"swr": "^1.0.1"
