--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"axios": "^0.24.0",
 		"bootstrap": "^5.0.2",
+		"fs-extra": "^10.0.0",
 		"next": "^12.0.3",
 		"next-i18next": "^8.9.0",
 		"react": "^17.0.2",
@@ -22,6 +23,7 @@
 	"devDependencies": {
 		"@svgr/webpack": "^5.5.0",
 		"@trivago/prettier-plugin-sort-imports": "^3.1.1",
+		"@types/fs-extra": "^9.0.13",
 		"@types/node": "^15.6.1",
 		"@types/react": "^17.0.8",
 		"@types/react-dom": "^17.0.5",
